# home_automato

./: .gitignore  Cargo.toml  README.md  lcn_config.json.template
src/: components.rs  ecs.rs  event_loop.rs  lcn.rs  lcn_config.rs  main.rs  requests.rs  systems.rs  world.rs
src/components/: activation_state.rs  lcn_command.rs  schedule.rs
src/ecs/: components.rs  ecs.rs  tests.rs  world.rs
src/ecs/components/: activation_state.rs  activation_time.rs  lcn_command.rs  schedule.rs
src/ecs/systems/: scheduler.rs
src/ecs/tests/: world_tests.rs
src/systems/: lcn_command_executor.rs  request_processor.rs  scheduler.rs  status_reporter.rs
templates/: home.html.hbs
tests/: world_test.rs
