[package]
name = "home_automation"
version = "0.1.0"
edition = "2018"

[lib]
name = "ecs"
path = "src/ecs/ecs.rs"

[[bin]]
name = "home_automation"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4"
itertools = "0.10.1"