[package]
name = "home_automation"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "home_automation"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
chrono = "0.4"
serde = "1.0.117"
serde_json = "1.0.59"
reqwest = { version = "0.11.4", features = ["blocking", "json", "cookies"] }
lame-ecs = { git = "https://github.com/rsmantini/lame_ecs.git" }